...

                <TextView
                    android:id="@+id/questionnaireMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginEnd="150dp"
                    android:layout_marginBottom="30dp"
                    android:text="I have a question for you"
                    android:textAlignment="gravity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
...

            <TextView
                android:id="@+id/questionnaireQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_marginBottom="17dp"
                android:gravity="left"
                android:text="Please rate your COPD symptoms"
                android:textAlignment="gravity"
                android:textColor="#000000"
...

            <RadioGroup
                android:id="@+id/coughAnswerGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/cough0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/cough1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/cough2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/cough3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/cough4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/cough5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <RadioGroup
                android:id="@+id/phlegmAnswerGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/phlegm0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/phlegm1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/phlegm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/phlegm3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/phlegm4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/phlegm5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <RadioGroup
                android:id="@+id/chestTightnessAnswerGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/chestTightness0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/chestTightness1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/chestTightness2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/chestTightness3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/chestTightness4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/chestTightness5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <RadioGroup
                android:id="@+id/breathlessnessAnswerGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/breathlessness0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/breathlessness1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/breathlessness2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/breathlessness3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/breathlessness4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/breathlessness5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <RadioGroup
                android:id="@+id/activitiesAnswerGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/activities0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/activities1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/activities2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/activities3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/activities4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/activities5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <RadioGroup
                android:id="@+id/confidenceAnswerGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

